--- a/.gitignore
+++ b/.gitignore
@@ -1,2 +1,29 @@
+.DS_Store
+
+*.class
+
+bin/
+.settings/
+
+# Eclipse files
+.project
+.classpath
+.metadata/
+
+# IntelliJ
+.idea/
+*.iml
+*.ipr
+*.iws
+atlassian-ide-plugin.xml
+
+# Maven files
 target/
+
+# Package Files #
+*.jar
+*.war
+*.ear
+
 data/
+*/DS_Store
