--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,8 +3,8 @@ spring.h2.console.path=/h2-console
 
 
 # JDBC URL for H2, in-memory mode
-#spring.datasource.url=jdbc:h2:mem:~/testdb
-spring.datasource.url=jdbc:h2:file:~/eclipse-workspace/testdb
+spring.datasource.url=jdbc:h2:mem:~/testdb
+#spring.datasource.url=jdbc:h2:file:~/eclipse-workspace/testdb
 spring.datasource.driver-class-name=org.h2.Driver
 spring.datasource.username=sa
 spring.datasource.password=password
